[package]
name = "graveyard_shift_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
# For Dev:
bevy = { version = "0.8.1", features = ["dynamic"] }
bevy_asset_loader = { version = "0.12.1", features = ["2d", "stageless"] }
bevy-inspector-egui = "0.13.0"
# For Release:
# bevy = "0.8.1"
bevy_pixel_camera = "0.2.1"
iyes_loopless = "0.7.0"
iyes_progress = { version = "0.5.0", features = ["iyes_loopless"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
